Fix delete btn bug completely / fix comment submit btn on mobile bug

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -58,6 +58,7 @@ button {
 }
 button,
 input[type="submit"] {
+  -webkit-appearance: none;
   cursor: pointer;
 }
 a,
